# ProyectoVR

./: .gitignore
Samples/: CMakeLists.txt  gradle.properties  gradlew
Samples/MetaDev/OVR/Include/: OVR_Math.h
Samples/SampleXrFramework/: CMakeLists.txt
Samples/SampleXrFramework/Src/: XrApp.cpp  XrApp.h
Samples/XrSamples/: CMakeLists.txt
Samples/XrSamples/HolaMundo/Projects/Android/: AndroidManifest.xml  build.gradle  settings.gradle
Samples/XrSamples/HolaMundo/java/: MainActivity.java
Samples/XrSamples/HolaMundo/res/values/: strings.xml
Samples/XrSamples/Posiciones/: CMakeLists.txt
Samples/XrSamples/Posiciones/Projects/Android/: AndroidManifest.xml  build.gradle  settings.gradle
Samples/XrSamples/Posiciones/Src/: main.cpp
Samples/XrSamples/Posiciones/java/: MainActivity.java
Samples/XrSamples/Posiciones/res/values/: strings.xml
Samples/XrSamples/PreLibreria/: CMakeLists.txt  README.md
Samples/XrSamples/PreLibreria/Projects/Android/: AndroidManifest.xml  build.gradle  settings.gradle
Samples/XrSamples/PreLibreria/Src/: main.cpp
Samples/XrSamples/PreLibreria/java/: MainActivity.java
Samples/XrSamples/PreLibreria/res/values/: strings.xml
Samples/XrSamples/SegundoPlano/: CMakeLists.txt  README.md
Samples/XrSamples/SegundoPlano/Projects/Android/: build.gradle  settings.gradle
Samples/XrSamples/SegundoPlano/Src/: main.cpp
Samples/XrSamples/SegundoPlano/java/: MainActivity.java
Samples/XrSamples/SuperHolaMundo/: CMakeLists.txt  README.md
Samples/XrSamples/SuperHolaMundo/Projects/Android/: AndroidManifest.xml  build.gradle  local.properties  settings.gradle
Samples/XrSamples/SuperHolaMundo/Projects/Android/gradle/wrapper/: gradle-wrapper.properties
Samples/XrSamples/SuperHolaMundo/Src/: main.cpp
Samples/XrSamples/SuperHolaMundo/res/values/: strings.xml
Samples/XrSamples/XrColorSpaceFB/: CMakeLists.txt
Samples/XrSamples/XrColorSpaceFB/Projects/Android/: AndroidManifest.xml  build.gradle  settings.gradle
Samples/XrSamples/XrColorSpaceFB/Src/: main.cpp
Samples/XrSamples/XrColorSpaceFB/java/: MainActivity.java
Samples/gradle/wrapper/: gradle-wrapper.properties
